[package]
name = "pes"
version = "0.1.0"
authors = ["jgerber"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.0"
pubgrub = "0.2.0"
serde = "1.0.123"
#portable-pty = "0.3.1"
#pty = "0.2.2"
thiserror = "1"

[dependencies.indexmap]
version = "1.6"
features = ["serde-1"]