[package]
name = "pes"
version = "0.6.0"
authors = ["jgerber"]
edition = "2018"

[[bin]]
name = "pes-run"
path = "src/bin/pesrun.rs"

[dependencies]
itertools = "0.10"
log = "0.4"
nix = "0.20"
peslib = {path = "../peslib" }
pretty_env_logger = "0.4"
structopt = "0.3"
users = "0.11"
prettytable-rs = "0.8"
anyhow = "1"

[dependencies.indexmap]
version = "^1.6"
features = ["serde-1"]
