[package]
name = "pes_core"
version = "0.6.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"


[dependencies]
libloading = "0.7"
nom = "6.1"
toml = "0.5.*"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.*"
pubgrub = {version = "0.2.*", features = ["serde"] }
