[package]
name = "peslib"
version = "0.2.0"
authors = ["jgerber"]
edition = "2018"

[[bin]]
name="test"

[dependencies]
nom = "6.1.0"
pubgrub = {version = "0.2.*", features = ["serde"] }
serde = { version = "1.0.*", features = ["derive"] }
toml = "0.5.*"
thiserror = "1"
serde_yaml = "0.8.*"
generator = "0.6.*"
log = "0.4.*"
libloading = "0.7"
pes_interface = { path = "../pes_interface", version = "*" }

[dependencies.indexmap]
version = "^1.6"
features = ["serde-1"]

[dev-dependencies]
testutils = {path = "../testutils" }
